Ignore the target attribute if the download attribute is present

BUG=823050
R=mkwst@chromium.org

Change-Id: I50a6d1efb605c8eff538a0f157203812d0ba5f1b
Reviewed-on: https://chromium-review.googlesource.com/970701
Reviewed-by: Mike West <mkwst@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544449}
Former-commit-id: 23d031266e4759af1cbf58dfed947fdfcda5fe7d